# stylized-animation

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
assets/meshes/: Pitbull.fbx  Praying.fbx  Standing Death Left 01.fbx
cmake/: LinkASSIMP.cmake  LinkGLAD.cmake  LinkGLFW.cmake  LinkGLM.cmake  LinkImGui.cmake  LinkSTB.cmake
shaders/: animated_mesh.frag  animated_mesh.vert  blinn_phong.frag  blinn_phong.vert
src/: main.cpp
src/core/: AssetManager.cpp  AssetManager.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Types.h  Window.cpp  Window.h
src/renderer/: AnimatedMesh.cpp  AnimatedMesh.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  StaticMesh.cpp  StaticMesh.h
src/scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Light.h  Scene.h  Transform.cpp  Transform.h
src/ui/: DebugConsole.cpp  DebugConsole.h  RenderStats.cpp  RenderStats.h
